--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,15 @@
 version: '3'
 services:
   frontend:
-    image: frontend
-    build: frontend
+    image: maxandersson/frontend
+    build: frontend/
     ports:
       - "3000:80"
     environment:
       - REACT_APP_SOME_ENV="some value"
 
   backend:
-    image: backend
+    image: maxandersson/backend
     build: backend/
     ports:
       - "4000:4000"
