--- a/kustomize/dev/kustomization.yaml
+++ b/kustomize/dev/kustomization.yaml
@@ -11,7 +11,7 @@ resources:
 
 configMapGenerator:
 - name: config
-  env: .env.dev
+  env: .env.dev.2
 
 patchesStrategicMerge:
 - backend-deployment.yaml
