--- a/kustomize/dev/neo4j/templates/common-configmap.yaml
+++ b/kustomize/dev/neo4j/templates/common-configmap.yaml
@@ -31,7 +31,7 @@ data:
   NEO4J_metrics_graphite_enabled: "false"
   NEO4J_metrics_graphite_server: "localhost:2003"
   NEO4J_metrics_graphite_interval: "3s"
-  NEO4J_metrics_prometheus_enabled: "false"
+  NEO4J_metrics_prometheus_enabled: "true"
   NEO4J_metrics_prometheus_endpoint: "localhost:2004"
   NEO4J_metrics_csv_enabled: "true"
   NEO4J_metrics_csv_interval: "3s"
